cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_25.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ecb.c:31: error: DEAD_STORE
  The value written to &l (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ecb.c:31:5: Write of unused value
29.       l = d[1];
30.       l2n(l, out);
31.       l = d[0] = d[1] = 0;
          ^
32.   }
